--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "mongoose-id-autoinc": "^2013.7.14-4",
     "lodash": "^2.4.1",
     "morgan": "^1.1.0"
+  },
+  "dependencies": {
+    "async": "^0.9.0"
   }
 }
